benchmarks/verus/bignum/vericoder_glm_15-09_18h46/debug/bignums_Zeros_iter7_error.log
=== Verification Error - Iteration 7 ===
File: /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/files/bignums_Zeros.rs
Time: 2025-09-15 19:15:34

Full Error Output:
--------------------------------------------------------------------------------
Compilation failed: error[E0599]: no method named `to_usize` found for struct `verus_builtin::int` in the current scope
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_glm_15-09_18h46/bignums_Zeros_impl.rs:35:18
   |
35 |   for _ in 0..(n.to_usize()) {
   |                  ^^^^^^^^ method not found in `int`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0599`.

--------------------------------------------------------------------------------

Additional Output:
error[E0599]: no method named `to_usize` found for struct `verus_builtin::int` in the current scope
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_glm_15-09_18h46/bignums_Zeros_impl.rs:35:18
   |
35 |   for _ in 0..(n.to_usize()) {
   |                  ^^^^^^^^ method not found in `int`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0599`.
